--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -191,10 +191,7 @@
                             <li><a class="dropdown-item" href="{{ url_for('instances.index') }}">
                                 <i class="fas fa-server me-2"></i>实例管理
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('accounts.index') }}">
-                                <i class="fas fa-chart-bar me-2"></i>账户统计
-                            </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('accounts.list') }}">
+                            <li><a class="dropdown-item" href="{{ url_for('account_list.list_accounts') }}">
                                 <i class="fas fa-users me-2"></i>账户管理
                             </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('account_classification.index') }}">
