fix: 修复管理仪表板模板引用错误
- 修复所有admin模板文件中对已删除admin_layout.html的引用
- 将所有admin模板文件改为引用layout.html
- 修复/admin/dashboard路由500错误
- 批量更新8个admin模板文件的extends引用

--- a/app/templates/admin/constants.html
+++ b/app/templates/admin/constants.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "常量管理" %}
 {% set subtitle = "系统常量和配置管理" %}
