--- a/app/templates/admin/dashboard.html
+++ b/app/templates/admin/dashboard.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "管理仪表板" %}
 {% set subtitle = "系统概览和快速操作" %}
