--- a/app/templates/admin/development_tools.html
+++ b/app/templates/admin/development_tools.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "开发工具" %}
 {% set subtitle = "代码质量分析和开发辅助工具" %}
