--- a/app/templates/admin/error_management.html
+++ b/app/templates/admin/error_management.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "错误管理" %}
 {% set subtitle = "高级错误处理和恢复系统" %}
