--- a/app/templates/admin/user_roles.html
+++ b/app/templates/admin/user_roles.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "角色管理" %}
 {% set subtitle = "用户角色和权限管理" %}
