--- a/app/templates/admin/users.html
+++ b/app/templates/admin/users.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "用户管理" %}
 {% set subtitle = "用户账户和权限管理" %}
