--- a/app/templates/admin/system_config.html
+++ b/app/templates/admin/system_config.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "系统配置" %}
 {% set subtitle = "系统参数配置和管理" %}
