--- a/app/templates/admin/system_logs.html
+++ b/app/templates/admin/system_logs.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "系统日志" %}
 {% set subtitle = "系统运行日志和错误日志" %}
