--- a/app/templates/admin/user_permissions.html
+++ b/app/templates/admin/user_permissions.html
@@ -1,4 +1,4 @@
-{% extends "admin/admin_layout.html" %}
+{% extends "admin/layout.html" %}
 
 {% set title = "权限管理" %}
 {% set subtitle = "系统权限和用户权限管理" %}
