--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -220,11 +220,11 @@
                             <i class="fas fa-cogs me-1"></i>管理中心
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="adminDropdown">
-                            <li><a class="dropdown-item" href="{{ url_for('main.admin') }}">
-                                <i class="fas fa-tachometer-alt me-2"></i>管理首页
+                            <li><a class="dropdown-item" href="{{ url_for('admin.system_config_page') }}">
+                                <i class="fas fa-sliders-h me-2"></i>系统配置
                             </a></li>
-                            <li><a class="dropdown-item" href="{{ url_for('admin.admin_dashboard') }}">
-                                <i class="fas fa-chart-pie me-2"></i>管理仪表板
+                            <li><a class="dropdown-item" href="{{ url_for('admin.constants_management') }}">
+                                <i class="fas fa-list me-2"></i>常量管理
                             </a></li>
                         </ul>
                     </li>
