--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -220,6 +220,9 @@
                             <i class="fas fa-cogs me-1"></i>管理中心
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="adminDropdown">
+                            <li><a class="dropdown-item" href="{{ url_for('config_management.index') }}">
+                                <i class="fas fa-cogs me-2"></i>配置管理
+                            </a></li>
                             <li><a class="dropdown-item" href="{{ url_for('admin.system_config_page') }}">
                                 <i class="fas fa-sliders-h me-2"></i>系统配置
                             </a></li>
