--- a/app/templates/accounts/list.html
+++ b/app/templates/accounts/list.html
@@ -612,7 +612,7 @@ function viewAccountPermissions(accountId) {
     button.innerHTML = '<i class="fas fa-spinner fa-spin me-1"></i>加载中...';
     button.disabled = true;
     
-    fetch(`/accounts/${accountId}/permissions`, {
+    fetch(`/account-list/${accountId}/permissions`, {
         method: 'GET',
         headers: {
             'X-CSRFToken': csrfToken
@@ -642,7 +642,7 @@ function showPermissionsModal(permissions, account) {
     
     try {
         // 获取数据库类型
-        const dbType = account.instance.db_type;
+        const dbType = account.db_type;
         console.log('数据库类型:', dbType);
         
         // 检查权限对象的所有属性
