--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -230,9 +230,12 @@
                                 <i class="fas fa-list me-2"></i>常量管理
                             </a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{{ url_for('user_management.index') }}">
-                                <i class="fas fa-users me-2"></i>用户管理
-                            </a></li>
+               <li><a class="dropdown-item" href="{{ url_for('user_management.index') }}">
+                   <i class="fas fa-users me-2"></i>用户管理
+               </a></li>
+               <li><a class="dropdown-item" href="{{ url_for('scheduler.index') }}">
+                   <i class="fas fa-clock me-2"></i>定时任务
+               </a></li>
                         </ul>
                     </li>
                     {% endif %}
