--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -197,6 +197,10 @@
                             <li><a class="dropdown-item" href="{{ url_for('account_classification.index') }}">
                                 <i class="fas fa-tags me-2"></i>账户分类管理
                             </a></li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li><a class="dropdown-item" href="{{ url_for('database_types.index') }}">
+                                <i class="fas fa-database me-2"></i>数据库类型管理
+                            </a></li>
                         </ul>
                     </li>
                     <li class="nav-item">
